# feature-store-bundle-integration

./: pyproject.toml
.github/workflows/: integration.yml
bootstrap/: bootstrap_base.py  install_benvy.py
src/: daipe.py
src/daipeproject/_config/: config.yaml  config_dev.yaml  jobs.yaml  orchestration.yaml
src/daipeproject/_config/bundles/: dbxdeploy.yaml
src/daipeproject/_orchestration/: clear.py
src/daipeproject/features/: feature1.py  feature2.py
