[tool.poetry]
name = "daipe-project"
version = "1.0"
description = "Daipe Project"

authors = [
    "Datasentics Daipe Team"
]

[tool.poetry.dependencies]
# DBR 10.4 python
python = "3.8.10"

# Custom dependencies
injecta = "0.10.*"
daipe-core = "^1.4.3"
databricks-bundle = "^1.3.1"
datalake-bundle = "^1.2.2"
feature-store-bundle = {path = "/Workspace/Repos/integration/feature-store-bundle"}

[tool.poetry.dev-dependencies]
# DBR 10.4 dependencies
pip = "21.0.1"
setuptools = "52.0.0"
wheel = "0.36.2"
boto3 = "1.16.7"
chardet = "4.0.0"
idna = "2.10"
ipython-genutils = "0.2.0"
joblib = "1.0.1"
kiwisolver = "1.3.1"
numpy = "1.20.1"
patsy = "0.5.1"
Pillow = "8.2.0"
prompt-toolkit = "3.0.17"
ptyprocess = "0.7.0"
python-dateutil = "2.8.1"
requests = "2.25.1"
scikit-learn = "0.24.1"
statsmodels = "0.12.2"
tornado = "6.1"
urllib3 = "1.25.11"
appdirs = "1.4.4"
botocore = "1.19.7"
cycler = "0.10.0"
decorator = "5.0.6"
facets-overview = "1.0.0"
ipykernel = "5.3.4"
jedi = "0.17.2"
jupyter-client = "6.1.12"
koalas = "1.8.2"
pandas = "1.2.4"
pexpect = "4.8.0"
protobuf = "3.17.2"
pyarrow = "4.0.0"
pyparsing = "2.4.7"
pytz = "2020.5"
requests-unixsocket = "0.2.0"
scipy = "1.6.2"
six = "1.15.0"
tenacity = "8.0.1"
traitlets = "5.0.5"
virtualenv = "20.4.1"
backcall = "0.2.0"
certifi = "2020.12.5"
Cython = "0.29.23"
distlib = "0.3.4"
filelock = "3.6.0"
ipython = "7.22.0"
jmespath = "0.10.0"
jupyter-core = "4.7.1"
matplotlib = "3.4.2"
parso = "0.7.0"
pickleshare = "0.7.5"
plotly = "5.5.0"
Pygments = "2.8.1"
pyzmq = "20.0.0"
s3transfer = "0.3.7"
seaborn = "0.11.1"
ssh-import-id = "5.10"
threadpoolctl = "2.1.0"
wcwidth = "0.2.5"
zipp = "3.4.1"
importlib-metadata = "3.10.0"
distro = "1.4.0"

# Custom dev dependencies
pyspark = {url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/pyspark-3.2.0-py2.py3-none-any.whl"}
delta-spark = {url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/delta_spark-1.1.0-py3-none-any.whl"}
pyfony-core = "^0.8.2"
dbx-deploy = "^1.3.1"
jobs-bundle = "^0.5.1"

[pyfony.bootstrap]
root_module_name="daipeproject"
allowed_environments=["dev", "test", "prod"]
